--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -38,16 +38,28 @@
     &--white {
       background-color: $color-white;
       color: $color-gray-dark;
+
+      &::after {
+        background-color: $color-white;
+      }
     }
+
+    &--green {
+      background-color: $color-primary;
+      color: $color-white;
+
+      &::after {
+        background-color: $color-primary;
+      }
+    }
+
     
     &:hover::after {
       transform: scale(1.5);
       opacity: 0;
     }
     
-    &--white::after {
-      background-color: $color-white;
-    }
+    
   
     &--animated {
       animation: moveFromBottom 1s ease-out 0.75s;
