--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
       text-transform: uppercase;
@@ -9,6 +10,10 @@
       position: relative;
   
       transition: all 0.2s ease-out;
+
+      // Change for the <button> element
+      border: none;
+      cursor: pointer;
     }
   
     &:hover {
@@ -16,7 +21,8 @@
       box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
     }
     
-    &:active {
+    &:focus, &:active {
+      outline: none;
       transform: translateY(-1px);
       box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
     }
