--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -1,3 +1,5 @@
+@import "../abstracts/variable";
+
 .section-about {
     background-color: $color-gray-light-1;
     padding: 25rem 0;
@@ -20,6 +22,9 @@
 
 }
 
+
+
+
 .section-tours {
     background-color: $color-gray-light-1;
     padding: 25rem 0 15rem 0;
@@ -31,3 +36,28 @@
     padding: 15rem 0;
     // background-color:  $color-gray-light-1;
 }
+
+.section-book {
+    padding: 15rem 0;
+    background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+}
+
+.book {
+    background-image: linear-gradient(105deg, 
+                                    rgba($color-white, 0.9) 0%, 
+                                    rgba($color-white, 0.9) 50%, 
+                                    transparent 50%), 
+                                    url(../img/nat-10.jpg);
+    background-size: cover;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+
+    height: 50rem;
+
+    &_form {
+        width: 50%;
+        padding: 6rem;
+    }
+}
+
+  
