--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,8 @@
 // Layout Folder
 @import "layout/header";
 @import "layout/grid";
+@import "layout/footer";
+@import "layout/navigation";
 
 // Pages Folder
 @import "pages/home";
