--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -8,6 +8,7 @@
 
 .section-features {
     padding: 20rem 0;
+    
     background-image: linear-gradient(
         to right, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)
       ),
@@ -15,6 +16,7 @@
     background-size: cover;
 
     transform: skewY(-7deg);
+    margin-top: -11rem;
 
     & > * {
         transform: skewY(7deg);
