--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -8,6 +8,9 @@
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
     transition: transform 0.2s;
 
+    @include respond(tab-port){
+        padding: 2rem;
+    }
 
 
     &_icon {
@@ -16,6 +19,11 @@
         background-image: linear-gradient(to right, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8));
         -webkit-background-clip: text;
         color: transparent;
+
+        @include respond(tab-port){
+            margin-bottom: 0;
+        }
+    
     }
 
     &:hover {
