--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -18,6 +18,10 @@
         width: 90%;
         display: block;
         transition: all 0.3s;
+
+        @include respond(tab-port){
+            width: 100%;
+        }
         
 
         &:focus {
@@ -56,6 +60,11 @@
     &_radio-group {
         width: 49%;
         display: inline-block;
+
+        @include respond(tab-port){
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &_radio-input {
