--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,9 +3,17 @@
     padding: 10rem 0;
     font-size: 1.4rem;
 
+    @include respond(tab-port){
+        padding: 8rem 0;
+    }
+
     &_logo-box {
         text-align: center;
         margin-bottom: 8rem;
+
+        @include respond(tab-port){
+            margin-bottom: 6rem;
+        }
     }
 
     &_logo {
@@ -16,6 +24,11 @@
     &_navigation {
         border-top: 1px solid $color-gray-light-2;
         padding-top: 2rem;
+
+        @include respond(tab-port){
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &_list {
@@ -53,5 +66,11 @@
         padding-top: 2rem;
         text-align: justify;
         width: 80%;
+        float: left;
+
+        @include respond(tab-port){
+            width: 100%;
+
+        }
     }
 }
