--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -15,6 +15,13 @@
       box-shadow: 0 1rem 3rem rgba($color-black, .1);
       text-align: center;
       cursor: pointer;
+
+      @include respond(tab-port){
+        height: 6rem;
+        width: 6rem;
+        top: 4.5rem;
+        right: 4.5rem;
+      }
   }
 
   &_background {
@@ -28,7 +35,10 @@
       z-index: 1000;
       transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
 
-      //transform: scale(80);
+      @include respond(tab-port){
+        top: 4.5rem;
+        right: 4.5rem;
+      }
   }
 
   &_nav {
@@ -71,6 +81,8 @@
           background-size: 220%;
           transition: all .4s;
 
+          
+
           span {
               margin-right: 1.5rem;
               display: inline-block;
@@ -101,6 +113,10 @@
   &_icon {
       position: relative;
       margin-top: 3.5rem;
+
+      @include respond(tab-port){
+        margin-top: 2.9rem;
+      }
 
       &,
       &::before,
