--- a/sass/abstracts/_variable.scss
+++ b/sass/abstracts/_variable.scss
@@ -1,9 +1,14 @@
-$color-primary: #7ed56f;
-$color-primary-light: #55c57a;
-$color-primary-dark: #28b485;
+$color-primary: #ff4d4f; // Pulse Red
 
-$color-secondary-light: #ffb900;
-$color-secondary-dark: #ff7730;
+
+$bg-gray-light: rgba(110, 109, 109, 0.34);
+$bg-gray-dark: rgba(111, 108, 108, 0.24);
+// 
+
+
+
+$color-secondary-light: #34495e; // Charcoal Gray
+$color-secondary-dark: #2c3e50; // Midnight Blue
 
 $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
