--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -42,3 +42,13 @@
       transform: translate(0);
     }
   }
+
+  @keyframes pulsate {
+    0% {
+      transform: scale(1);
+    }
+
+    100% {
+      transform: scale(1.2);
+    }
+  }
