--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,26 +1,27 @@
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.7;
   color: $color-gray-dark;
 }
 
 .heading-primary {
+  font-family: "Inter", sans-serif;
+
+
   color: $color-white;
-  text-transform: uppercase;
   text-align: center;
 
   backface-visibility: hidden;
-  margin-bottom: 40px;
 
   
 
   &--main {
     display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 35px;
+    font-size: 13rem;
+    font-weight: 900;
+    letter-spacing: 2px;
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.5);
 
     animation: moveFromLeft 2s ease-out;
 
@@ -36,9 +37,13 @@ body {
 
   &--sub {
     display: block;
-    font-size: 2rem;
-    font-weight: 400;
-    letter-spacing: 17.4px;
+    font-size: 4rem;
+    font-weight: 700;
+    letter-spacing: 1px;
+    font-style: italic;
+    margin-bottom: 4rem;
+
+    
 
     animation: moveFromRight 2s ease-out;
 
@@ -53,21 +58,20 @@ body {
 }
 
 .heading-secondary {
-  font-size: 3.5rem;
+  font-size: 3.2rem;
   text-transform: uppercase;
   font-weight: 700;
-  letter-spacing: 2px;
   cursor: default;
 
   display: inline-block;
   background-image: linear-gradient(
     to right,
-    rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)
+    rgba($color-secondary-light, 0.8), rgba($color-secondary-dark, 0.8)
   );
   -webkit-background-clip: text;
   color: transparent;
 
-  transition: all 0.2s;
+  transition: all 0.5s;
 
   @include respond(tab-port){
     font-size: 2.5rem;
@@ -75,20 +79,29 @@ body {
 
 
   &:hover {
-    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    transform: scale(1.05);
     text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
   }
 }
 
 
 .heading-tertiary {
-  font-size: $default-font-size;
+  font-family: "Inter", sans-serif;
+  font-size: 2.4rem;
   font-weight: 700;
-  text-transform: uppercase;
+  color: #000;
+  // background-image: linear-gradient(
+  //   to right,
+  //   rgba($color-secondary-light, 0.8), rgba($color-secondary-dark, 0.8)
+  // );
+  // -webkit-background-clip: text;
+  // color: transparent;
 }
 
 .paragraph {
   font-size: $default-font-size;
+  line-height: 1.2;
+  
 
    &:not(:last-child) {
     margin-bottom: 3rem;
