--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,10 +2,13 @@
     &,
     &:link,
     &:visited {
+      font-family: "Poppins", sans-serif;
+      font-size: 3.6rem;
+      font-weight: 700;
       text-transform: uppercase;
       text-decoration: none;
-      padding: 15px 40px;
-      border-radius: 30px;
+      padding: 1rem 8rem;
+      border-radius: 10px;
       display: inline-block;
       position: relative;
   
@@ -32,7 +35,7 @@
       display: inline-block;
       height: 100%;
       width: 100%;
-      border-radius: 30px;
+      border-radius: 10px;
       position: absolute;
       top: 0;
       left: 0;
@@ -50,7 +53,7 @@
       }
     }
 
-    &--green {
+    &--pulsered {
       background-color: $color-primary;
       color: $color-white;
 
