--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -2,6 +2,16 @@
     max-width: $grid-width;
     margin: 0 auto;
     
+    &__feature-box {
+        position: absolute;
+        display: flex;
+        gap: 1rem;
+        width: 100%;
+        overflow-block: auto;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 3000;
+    }
 
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;
@@ -41,11 +51,6 @@
 
     }
 
-    .col-1-of-2 {
-        width: calc((100% - #{$gutter-horizontal}) / 2);
-        
-    }
-
     .col-1-of-3 {
         width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
     }
@@ -65,6 +70,16 @@
     .col-3-of-4 {
         width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
     }
+
+    // &__features {
+    //     position: absolute;
+    //     top: 10%;
+    //     left: 50%;
+    //     transform: translateX(-50%,);
+    //     width: 100%;
+
+
+    // }
 
 
 }
