--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -1,43 +1,63 @@
 @import "../abstracts/variable";
 @import "../abstracts/mixins";
 
+.parent-section {
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+
 .section-about {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   background-color: $color-gray-light-1;
-  padding: 25rem 0;
-  margin-top: -20vh;
+  padding: 5rem 3rem;
+  margin-top: -25rem;
+  width: 119rem;
+  height: 55rem;
+  z-index: 100;
+  border-radius: 10px;
 
   @include respond(tab-port) {
     padding: 20rem 8rem;
   }
+
 }
 
 .section-features {
-  padding: 20rem 0;
+  position: relative;
+  width: 100%;
+  padding: 35rem 0 45rem;
 
   background-image: linear-gradient(
       to right,
-      rgba($color-primary-light, 0.8),
-      rgba($color-primary-dark, 0.8)
+      rgba($color-secondary-light, 0.8),
+      rgba($color-secondary-dark, 0.8)
     ),
     url("../img/nat-4.jpg");
   background-size: cover;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
 
-  transform: skewY(-7deg);
-  margin-top: -11rem;
+  
+  margin-top: 11rem;
+  // transform: skewY(-7deg);
+  // & > * {
+  //   transform: skewY(7deg);
+  // }
 
-  & > * {
-    transform: skewY(7deg);
-  }
 
   @include respond(tab-port) {
     padding: 10rem 0;
   }
+
+
 }
 
 .section-tours {
   background-color: $color-gray-light-1;
-  padding: 25rem 0 15rem 0;
-  margin-top: -10rem;
+  padding: 3rem 0 15rem;
 
   @include respond(tab-port) {
     padding: 20rem 0 10rem 0;
@@ -45,6 +65,7 @@
 }
 
 .section-stories {
+  // display: none;
   position: relative;
   padding: 15rem 0;
   // background-color:  $color-gray-light-1;
@@ -55,11 +76,12 @@
 }
 
 .section-book {
+  display: none;
   padding: 15rem 0;
   background-image: linear-gradient(
     to right bottom,
-    $color-primary-light,
-    $color-primary-dark
+    $color-secondary-light,
+    $color-secondary-dark
   );
 
   @include respond(tab-port) {
@@ -68,6 +90,7 @@
 }
 
 .book {
+  // display: none;
   background-image: linear-gradient(
       105deg,
       rgba($color-white, 0.9) 0%,
