--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -1,9 +1,9 @@
 .feature-box {
     height: 32rem;
-    width: 34rem;
+    width: 30rem;
     background-color: rgba($color-white, 0.8);
     font-size: 1.5rem;
-    padding: 3rem;
+    padding: 3rem 4rem;
     text-align: center;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
