--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/card";
+@import "components/new-card";
 @import "components/story";
 @import "components/bg-video";
 @import "components/form";
