--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -28,7 +28,7 @@
 .section-features {
   position: relative;
   width: 100%;
-  padding: 35rem 0 45rem;
+  padding: 35rem 0 15rem;
 
   background-image: linear-gradient(
       to right,
@@ -38,7 +38,7 @@
     url("../img/nat-4.jpg");
   background-size: cover;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 84%, 0 100%);
 
   
   margin-top: 11rem;
